--- a/my-project.cabal
+++ b/my-project.cabal
@@ -9,12 +9,16 @@ build-type:          Simple
 extra-source-files:  README.md
 
 common warnings
-    ghc-options: -Wall -Werror=incomplete-patterns
+    -- remove `-pgmL markdown-unlit` if literate Markdown isn't needed
+    ghc-options: -Wall -Werror=incomplete-patterns -pgmL markdown-unlit
 
 executable my-project
     import:             warnings
     main-is:            Main.hs
     other-extensions:   UnicodeSyntax
-    build-depends:      base
+    other-modules:      Greet
+    build-depends:      base, markdown-unlit
     hs-source-dirs:     src
     default-language:   Haskell2010
+    -- literate Mardown
+    build-tool-depends: markdown-unlit:markdown-unlit
