--- a/my-project.cabal
+++ b/my-project.cabal
@@ -1,24 +1,39 @@
-cabal-version:       3.0
-name:                my-project
-version:             0.0.1
-license:             MIT
-license-file:        LICENSE
-author:              my-name
-maintainer:          my-email
-build-type:          Simple
-extra-source-files:  README.md
+cabal-version: 2.2
 
-common warnings
-    -- remove `-pgmL markdown-unlit` if literate Markdown isn't needed
-    ghc-options: -Wall -Werror=incomplete-patterns -pgmL markdown-unlit
+-- This file has been generated from package.yaml by hpack version 0.37.0.
+--
+-- see: https://github.com/sol/hpack
+
+name:           my-project
+version:        0.1.0.0
+description:    Please see the README on GitHub at <https://github.com/githubuser/my-project#readme>
+homepage:       https://github.com/githubuser/my-project#readme
+bug-reports:    https://github.com/githubuser/my-project/issues
+author:         Author name here
+maintainer:     example@example.com
+copyright:      2024 Author name here
+license:        BSD-3-Clause
+license-file:   LICENSE
+build-type:     Simple
+extra-source-files:
+    README.md
+
+source-repository head
+  type: git
+  location: https://github.com/githubuser/my-project
 
 executable my-project
-    import:             warnings
-    main-is:            Main.hs
-    other-extensions:   UnicodeSyntax
-    other-modules:      Greet
-    build-depends:      base, markdown-unlit
-    hs-source-dirs:     src
-    default-language:   Haskell2010
-    -- literate Mardown
-    build-tool-depends: markdown-unlit:markdown-unlit
+  main-is: Main.hs
+  other-modules:
+      Greet
+      Paths_my_project
+  autogen-modules:
+      Paths_my_project
+  hs-source-dirs:
+      src
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -pgmL markdown-unlit -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base
+    , hip
+    , markdown-unlit
+  default-language: Haskell2010
