--- a/package.yaml
+++ b/package.yaml
@@ -8,7 +8,6 @@ copyright:           "2024 Author name here"
 
 extra-source-files:
 - README.md
-- CHANGELOG.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -18,10 +17,6 @@ extra-source-files:
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
 description:         Please see the README on GitHub at <https://github.com/githubuser/my-project#readme>
-
-dependencies:
-- base >= 4.7 && < 5
-- hip
 
 ghc-options:
 - -Wall
@@ -33,9 +28,10 @@ ghc-options:
 - -Wmissing-home-modules
 - -Wpartial-fields
 - -Wredundant-constraints
+- -pgmL markdown-unlit
 
 executables:
-  ae-exe:
+  my-project:
     main:                Main.hs
     source-dirs:         src
     ghc-options:
@@ -43,4 +39,6 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - my-project
+    - base
+    - hip
+    - markdown-unlit
